# lab4

./: .travis.yml  CMakeLists.txt  README.md  input.txt
_build/: CMakeCache.txt  Makefile  cmake_install.cmake  example1  example2  install_manifest.txt
formatter_ex_lib/: CMakeLists.txt
formatter_ex_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
formatter_lib/: CMakeLists.txt
formatter_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
hello_world_application/: CMakeLists.txt
hello_world_application/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
hello_world_application/formatter_ex_lib/: CMakeLists.txt  Makefile  cmake_install.cmake
hello_world_application/formatter_ex_lib/formatter_lib/: Makefile  cmake_install.cmake
solver_application/: CMakeLists.txt
solver_application/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
solver_application/_build/formatter_ex_lib/: Makefile  cmake_install.cmake
solver_application/_build/solver_lib/: Makefile  cmake_install.cmake
solver_application/formatter_ex_lib/: CMakeLists.txt  Makefile  cmake_install.cmake
solver_application/formatter_ex_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
solver_application/formatter_ex_lib/formatter_lib/: CMakeLists.txt  Makefile  cmake_install.cmake
solver_application/formatter_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
solver_application/solver_lib/: CMakeLists.txt  Makefile  cmake_install.cmake
solver_lib/: CMakeLists.txt  solver.cpp
solver_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
