cmake_minimum_required(VERSION 3.4)
project(hello_world)
set(CMAKE_CXX_STANDART 11)
set(CMAKE_CXX_STANDART_REQUIRED ON)
set(CMAKE_CURRENT_SOURCE_DIR /home/snoreoh/snoreoh/workspace/projects/lab4.1)
add_executable(hello_world home/snoreoh/snoreoh/workspace/projects/lab4.1/hello_world_application/hello_world.cpp)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/formatter_lib)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/formatter_ex_lib)
find_package(formatter_ex PATHS ${CMAKE_CURRENT_SOURCE_DIR}/formatter_ex_lib/_build)
find_package(formatter  PATHS ${CMAKE_CURRENT_SOURCE_DIR}/formatter_lib/_build)
target_link_libraries(hello_world ${formatter_ex} ${formatter})

