cmake_minimum_required(VERSION 3.4)
project(solver)
set(CMAKE_CXX_STANDART 11)
set(CMAKE_CXX_STANDART_REQUIRED ON)
set(CMAKE_CURRENT_SOURCE_DIR /home/snoreoh/snoreoh/workspace/projects/lab4.1) 
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/solver_lib)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/formatter_lib)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/formatter_ex_lib)
add_executable(solver ${CMAKE_CURRENT_SOURCE_DIR}/solver_application/equation.cpp)
find_package(formatter_ex NAMES libformatter_ex.a PATHS ${CMAKE_CURRENT_SOURCE_DIR}/formatter_ex_lib/_build)
find_package(formatter NAMES libformatter.a PATHS ${CMAKE_CURRENT_SOURCE_DIR}/formatter_lib/_build)
find_package(solver_lib NAMES libsolver_lib.a PATHS ${CMAKE_CURRENT_SOURCE_DIR}/solver_lib/_build)
target_link_libraries(solver ${formatter_ex} ${formatter} ${solver_lib})
